<resources>
    <string name="app_name">CommunityApp</string>
    <string name="intro_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean et justo varius, porttitor diam nec, elementum nulla. Nunc posuere arcu vel sapien molestie </string>
    <string name="password">Password</string>
    <string name="username">Email</string>
    <string name="register">Register</string>
    <string name="log_in">Log in</string>
    <string name="welcome_to_city_app">Welcome To City App!</string>
    <string name="main_title">Cluj City App</string>
    <string name="menu_item_1">Report a problem</string>
    <string name="menu_item_2">Hang out</string>
    <string name="menu_item_3">View activities</string>
    <string name="menu_item_4">Vote for a city project</string>
    <string name="menu_item_5">Edit Information</string>
    <string name="api_maps_key">AIzaSyDafvRtxmoS9hdKMb_Cb5yDLzYgG_IDGxM</string>
    <string name="report_button">Report</string>
    <string name="photo_report_description">Photo</string>
    <string name="location_button_text">Location</string>
    <string name="title_activity_maps">Map</string>
    <string name="location_hint">Location</string>
    <string name="details_hint">Details</string>
    <string name="menu_item_8">View reports</string>
    <string name="view_on_map">Map</string>
    <string name="title_activity_reports">ReportsActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="map_view_button">Map View</string>
    <string name="details_button">Details</string>
    <string name="go">Go</string>
    <string name="save_schedule">Save Schedule</string>
    <string name="google_map_view">View on map</string>
    <string name="add_schedule">Add schedule</string>
    <string name="details">Details</string>
    <string name="view_schedules">View schedules</string>
    <string name="join">Join</string>
    <string name="members_string">Members</string>
    <string name="save">Save</string>
    <string name="date">Date</string>
    <string name="members">Members</string>
    <string name="time">Time</string>
</resources>
