<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="app.com.titus.communityapp.activitiy.authentication.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3AAFA9"
        android:orientation="vertical"
        android:padding="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_city_app"
            android:textColor="#fff"
            android:textSize="40sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intro_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/username"
            android:layout_width="194dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="#2B7A78"
            android:drawableStart="@drawable/ic_personp"
            android:hint="@string/username"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/password"
            android:layout_width="194dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="#2B7A78"
            android:drawableStart="@drawable/ic_security_black_24dp"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_style_green"
            android:text="@string/log_in"
            android:textColor="#fff" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_style_green"
            android:text="@string/register"
            android:textColor="#fff" />
    </LinearLayout>
</LinearLayout>
