<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitiy.report.ReportActivity">

    <include layout="@layout/app_toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="225dp"
        android:layout_height="156dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="73dp"
        android:contentDescription="@string/photo_report_description"
        app:srcCompat="@drawable/background" />

    <Spinner
        android:id="@+id/spinner"
        style="@android:style/Widget.Holo.Light.Spinner"
        android:layout_width="272dp"
        android:layout_height="37dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="185dp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="266dp"
        android:layout_height="61dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="86dp"
        android:ems="10"
        android:hint="@string/details_hint"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/report"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="13dp"
        android:background="@drawable/button_style_green"
        android:text="@string/report_button" />

    <EditText
        android:id="@+id/locationEdit"
        style="@android:style/Widget.EditText"
        android:layout_width="273dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/location_hint"
        android:inputType="textPersonName" />

</RelativeLayout>